Actulización del diseño de los certificados

--- a/index.html
+++ b/index.html
@@ -103,62 +103,7 @@
 
                 <div class="certificates-section" id="certificates-section">
                     <div class="certificates-container">
-                        <!-- Lista de certificados (lado izquierdo) -->
-                        <div class="certificates-list">
-                            <h3 class="list-title">Lista de Certificados</h3>
-                            <ul class="certificates-menu" id="certificatesList">
-                                <li class="certificate-item active" data-index="0">
-                                    <span class="certificate-number">01</span>
-                                    <span class="certificate-list-name">🐍 Python Essentials | Cisco</span>
-                                </li>
-                                <li class="certificate-item" data-index="1">
-                                    <span class="certificate-number">02</span>
-                                    <span class="certificate-list-name">☁️ AWS Academy Graduate | AWS Academy Cloud Foundations</span>
-                                </li>
-                                <li class="certificate-item" data-index="2">
-                                    <span class="certificate-number">03</span>
-                                    <span class="certificate-list-name">☕ Java Fundamentals | Oracle</span>
-                                </li>
-                                <li class="certificate-item" data-index="3">
-                                    <span class="certificate-number">04</span>
-                                    <span class="certificate-list-name">☕ Java Programming | Oracle</span>
-                                </li>
-                                <li class="certificate-item" data-index="4">
-                                    <span class="certificate-number">05</span>
-                                    <span class="certificate-list-name">🔒 IT Security Foundations: Operating System Security | LinkedIn</span>
-                                </li>
-                                <li class="certificate-item" data-index="5">
-                                    <span class="certificate-number">06</span>
-                                    <span class="certificate-list-name">📊 Introduction to Data Science | Cisco</span>
-                                </li>
-                                <li class="certificate-item" data-index="6">
-                                    <span class="certificate-number">07</span>
-                                    <span class="certificate-list-name">🗃️ Database Foundations | Oracle Academy</span>
-                                </li>
-                                <li class="certificate-item" data-index="7">
-                                    <span class="certificate-number">08</span>
-                                    <span class="certificate-list-name">🏗️ Data Structure | Oracle Academy</span>
-                                </li>
-                                <li class="certificate-item" data-index="8">
-                                    <span class="certificate-number">09</span>
-                                    <span class="certificate-list-name">⚡ Rapid Developer | Mendix</span>
-                                </li>
-                                <li class="certificate-item" data-index="9">
-                                    <span class="certificate-number">10</span>
-                                    <span class="certificate-list-name">🌐 Networking Basics | Cisco</span>
-                                </li>
-                                <li class="certificate-item" data-index="10">
-                                    <span class="certificate-number">11</span>
-                                    <span class="certificate-list-name">💻 Web Development Fundamentals | IBM SkillsBuild</span>
-                                </li>
-                                <li class="certificate-item" data-index="11">
-                                    <span class="certificate-number">12</span>
-                                    <span class="certificate-list-name">☁️ AWS Academy Graduate - AWS Academy Cloud Operations</span>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <!-- Galería de certificados (lado derecho) -->
+                        <!-- Galería de certificados -->
                         <div class="certificates-viewer">
                             <div class="certificate-container">
                                 <button class="navigation-arrows prev-arrow" id="prevArrow">&#8249;</button>
@@ -245,7 +190,7 @@
                                 <div class="preview-icon">
                                     <img src="images/preview.png" alt="Vista previa del proyecto" class="preview-image">
                                 </div>
-                                <div class="preview-text">Ver Proyecto</div>
+                                <div class="preview-text">Ver en vivo</div>
                                 <div class="preview-url">modatrend-production</div>
                             </a>
                         </div>
