Actualización de colores

--- a/index.html
+++ b/index.html
@@ -118,49 +118,49 @@
                     </div>
                 </div>
 
-                <!-- Tech stack -->
-                <div class="tech-stack">
-                    <h2>Tech Stack</h2>
-                    <div class="tech-grid">
-                        <div class="tech-category">
-                            <h3>Lenguajes de programación:</h3>
-                            <div class="tech-tags">
-                                <span class="tech-tag python">🐍 Python</span>
-                                <span class="tech-tag java">☕ Java</span>
-                                <span class="tech-tag javascript">📜 JavaScript</span>
-                            </div>
-                        </div>
+                <!-- Tech stack -->              
+                <div class="tech-stack">                     
+                    <h2>Tech Stack</h2>                     
+                    <div class="tech-container">
+                        <div class="tech-category">                             
+                            <h3>Lenguajes de programación:</h3>                             
+                            <div class="tech-tags">                                 
+                                <span class="tech-tag python">🐍 Python</span>                                 
+                                <span class="tech-tag java">☕ Java</span>                                 
+                                <span class="tech-tag javascript">📜 JavaScript</span>                             
+                            </div>                         
+                        </div>                          
 
-                        <div class="tech-category">
-                            <h3>Front-End:</h3>
-                            <div class="tech-tags">
-                                <span class="tech-tag html">🔥 HTML</span>
-                                <span class="tech-tag css">🎨 CSS</span>
-                                <span class="tech-tag react">⚛️ React</span>
-                            </div>
-                        </div>
+                        <div class="tech-category">                             
+                            <h3>Front-End:</h3>                             
+                            <div class="tech-tags">                                 
+                                <span class="tech-tag html">🔥 HTML</span>                                 
+                                <span class="tech-tag css">🎨 CSS</span>                                 
+                                <span class="tech-tag react">⚛️ React</span>                             
+                            </div>                         
+                        </div>                          
 
-                        <div class="tech-category">
-                            <h3>Back-End:</h3>
-                            <div class="tech-tags">
-                                <span class="tech-tag node">💚 Node.js</span>
-                            </div>
-                        </div>
+                        <div class="tech-category">                             
+                            <h3>Back-End:</h3>                             
+                            <div class="tech-tags">                                 
+                                <span class="tech-tag node">💚 Node.js</span>                             
+                            </div>                         
+                        </div>                          
 
-                        <div class="tech-category">
-                            <h3>Bases de datos:</h3>
-                            <div class="tech-tags">
-                                <span class="tech-tag sql">🗃️ SQL</span>
-                            </div>
-                        </div>
+                        <div class="tech-category">                             
+                            <h3>Bases de datos:</h3>                             
+                            <div class="tech-tags">                                 
+                                <span class="tech-tag sql">🗃️ SQL</span>                             
+                            </div>                         
+                        </div>                          
 
-                        <div class="tech-category">
-                            <h3>Cloud:</h3>
-                            <div class="tech-tags">
-                                <span class="tech-tag aws">☁️ AWS</span>
-                            </div>
+                        <div class="tech-category">                             
+                            <h3>Cloud:</h3>                             
+                            <div class="tech-tags">                                 
+                                <span class="tech-tag aws">☁️ AWS</span>                             
+                            </div>                         
                         </div>
-                    </div>
+                    </div>                 
                 </div>
 
                 <!-- Sección de Nivel de Inglés -->
